--- a/inexlib/exlib/examples/build
+++ b/inexlib/exlib/examples/build
@@ -1,6 +1,6 @@
 #!/bin/sh -f
 
-bush_home=`dirname $0`/../../../../bush
+bush_home=`dirname $0`/../../../bush
 
 inlib_home=${bush_home}/../inexlib/inlib
 exlib_home=${bush_home}/../inexlib/exlib
